--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
     <!--Start of Portafolio #home-->
     <div class="jumbotron jumbotron-fluid height100 banner" id="home">
-        <div class="container h100">
+        <div class="container h100 ">
             <div class="contentBox h100">
                 <section class="section-name">
                     <video src="smoke.mp4" autoplay muted class="video"></video>
@@ -121,7 +121,7 @@
 
     <!--Section of Projects-->
     <section class="projects" id="projects">
-            <!-- <div class="container h100">
+            <div class="container h100">
                 <div class="row">
                     <div class="offset-sm-2 col-sm-8">
                         <div class="headerText text-center">
@@ -135,8 +135,8 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="placeBox">
-                            <div class="imgBx">
-                                <img src="imagen/images (1).png" class="img-fluid">
+                            <div class="shadow">
+                                <!-- <img src="imagen/images (1).png" class="img-fluid"> -->
                             </div>
                             <div class="content">
                                 <h3>Nombre del proyecto<br><span>Enlace Link</span></h3>
@@ -144,6 +144,7 @@
                         </div>
                     </div>
 
+                    <!--
                     <div class="col-sm-4">
                         <div class="placeBox">
                             <div class="imgBx">
@@ -168,18 +169,7 @@
 
                 </div>
             </div> -->
-    
-    <!-- Swiper -->
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"></div>
-                <div class="swiper-slide"></div>
-                <div class="swiper-slide"></div>
-                <div class="swiper-slide"></div>
-            </div>
-            <!-- Add Pagination -->
-            <div class="swiper-pagination"></div>
-        </div>
+
     
     </section>
 
