Create change on designe

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portafolio</title>
+    <link rel="dns-prefetch" href="https://www.google-analytics.com/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -103,8 +104,8 @@
     <!--Section of About me-->
     <div id="particles-js">
         <section class="aboutMe" id="aboutMe">
-            <div class="container" >
-                <div class="row text-center justify-content-center textAboutme ">
+            <div class="container">
+                <div class="row text-center justify-content-center textAboutme">
                     <h2>
                         Quién Soy
                     </h2>
@@ -118,6 +119,7 @@
             </div>
         </section>
     </div>
+
 
     <!--Section of Projects-->
     <section class="projects" id="projects">
@@ -260,33 +262,13 @@
 
            </div> 
         </footer>
-
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!--Scrip for particles-->
     <script type="text/javascript" src="resourses/particles.js"></script>
     <script type="text/javascript" src="resourses/app.js"></script>
-    <!--Scrip for slider-->
-    <script type="text/javascript" src="resourses/swiper.min.js"></script>
-     <!-- Initialize Swiper -->
-    <script>
-            var swiper = new Swiper('.swiper-container', {
-            effect: 'coverflow',
-            grabCursor: true,
-            centeredSlides: true,
-            slidesPerView: 'auto',
-            coverflowEffect: {
-                rotate: 50,
-                stretch: 0,
-                depth: 100,
-                modifier: 1,
-                slideShadows : true,
-            },
-            pagination: {
-                el: '.swiper-pagination',
-            },
-            });
     </script>
 </body>
 </html>
