Change the routes of my stylesheets

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="dns-prefetch" href="https://www.google-analytics.com/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="Name.css">
-    <link rel="stylesheet" type="text/css" href="AboutMe.css">
-    <link rel="stylesheet" type="text/css" href="swiper.min.css">
-    <link rel="stylesheet" type="text/css" href="Projects.css">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
+    <link rel="stylesheet" type="text/css" href="src/Name.css">
+    <link rel="stylesheet" type="text/css" href="src/AboutMe.css">
+    <link rel="stylesheet" type="text/css" href="src/resourses/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="src/Projects.css">
   
 </head>
 <body>
@@ -53,7 +53,7 @@
         <div class="container h100 ">
             <div class="contentBox h100">
                 <section class="section-name">
-                    <video src="smoke.mp4" autoplay muted class="video"></video>
+                    <video src="src/smoke.mp4" autoplay muted class="video"></video>
                     <h1 class="display-4 nameStyle text-center">
                         <span>M</span>
                         <span>A</span>
@@ -267,8 +267,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!--Scrip for particles-->
-    <script type="text/javascript" src="resourses/particles.js"></script>
-    <script type="text/javascript" src="resourses/app.js"></script>
+    <script type="text/javascript" src="src/resourses/particles.js"></script>
+    <script type="text/javascript" src="src/resourses/app.js"></script>
     </script>
 </body>
 </html>
