Removed effect of particles (for speed up the video in area of name), add style in area of about me

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-dark bg-dark">
                 <div class="container">
-                    <a class="navbar-brand" href="#">March</a>
+                    <a class="navbar-brand font-Text" href="#">MARCH</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -102,23 +102,26 @@
     </div>
 
     <!--Section of About me-->
-    <div id="particles-js">
-        <section class="aboutMe" id="aboutMe">
-            <div class="container">
-                <div class="row text-center justify-content-center textAboutme">
-                    <h2>
-                        Quién Soy
-                    </h2>
-                        <br></br>
-                        <br></br>
-                    <p>
-                        "Soy una apasionada de aprender continuamente y cuando no estoy "codeando" me gusta ver cine de arte, asistir al teatro, 
-                        leer libros de diversos temas de mi interés o simplemente ver alguna serie preferentemente de ciencia ficción o thriller"
-                    </p>
-                </div>
-            </div>
+    
+        <section class="aboutMe jumbotron jumbotron-fluid height100 d-flex justify-content-center text-center" id="aboutMe">
+            <!-- <div class="container h100">
+                <div class="row text-center justify-content-center h100"> -->
+                    <div class="box d-flex justify-content-center">
+                        <div class="layer1">
+                            <h2 class="titleAbout">
+                                Quién Soy
+                            </h2>
+                            <p class="titleAbout">
+                                Soy una apasionada de aprender continuamente y cuando no estoy <i>codeando</i> me gusta ver cine de arte, asistir al teatro, 
+                                leer libros de diversos temas de mi interés o simplemente ver alguna serie preferentemente de ciencia ficción o thriller.
+                            </p>
+                        </div>
+                        <div class="layer2"></div>
+                        <div class="layer3"></div>
+                    </div>
+                <!-- </div>
+            </div> -->
         </section>
-    </div>
 
 
     <!--Section of Projects-->
@@ -266,9 +269,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!--Scrip for particles-->
-    <script type="text/javascript" src="src/resourses/particles.js"></script>
-    <script type="text/javascript" src="src/resourses/app.js"></script>
-    </script>
+    
 </body>
 </html>
