--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="src/Name.css">
     <link rel="stylesheet" type="text/css" href="src/AboutMe.css">
     <link rel="stylesheet" type="text/css" href="src/Projects.css">
+    <link rel="stylesheet" type="text/css" href="src/cv.css">
   
 </head>
 <body>
@@ -124,7 +125,7 @@
 
 
     <!--Section of Projects-->
-    <section class="jumbotron jumbotron-fluid slidPro">
+    <section class="jumbotron jumbotron-fluid slidPro" id="projects">
         <div class="justify-content-center text-center">
                 <h2>Proyectos</h2>
                 <br>
@@ -135,53 +136,62 @@
                     <div class="content">
                         <h2>Save Word</h2>
                         <p>Aqui va algo de la descripcion del proyecto</p>
+                        <button type="button" class="btn btn-info">Sitio</button>
+                        <button type="button" class="btn btn-info">Github</button>
                     </div>
                 </li>
                 <li>
                     <div class="content">
                         <h2>Tic Tac Toe</h2>
                         <p>Aqui va algo de la descripcion del proyecto</p>
+                        <button type="button" class="btn btn-info">Sitio</button>
+                        <button type="button" class="btn btn-info">Github</button>
                     </div>
                 </li>
                 <li>
                     <div class="content">
                         <h2>Pocket-Mon</h2>
                         <p>Aqui va algo de la descripcion del proyecto</p>
+                        <button type="button" class="btn btn-info">Sitio</button>
+                        <button type="button" class="btn btn-info">Github</button>
                     </div>
                 </li>
                 <li>
                     <div class="content">
                         <h2>Food-Map</h2>
                         <p>Aqui va algo de la descripcion del proyecto</p>
+                        <button type="button" class="btn btn-info">Sitio</button>
+                        <button type="button" class="btn btn-info">Github</button>
                     </div>
                 </li>
                 <li>
                     <div class="content">
                         <h2>Step'n Safe</h2>
                         <p>Aqui va algo de la descripcion del proyecto</p>
+                        <button type="button" class="btn btn-info">Sitio</button>
+                        <button type="button" class="btn btn-info">Github</button>
                     </div>
                 </li>
             </ul> 
     </section>
 
     <!--Section of Curriculum-->
-    <section class="curriculum" id="curriculum">
-        <div class="container">
-            <div class="row">
-                <div class="offset-sm-2 col-sm-8">
-                    <div class="headerText text-center">
-                        <h2>
-                            Curriculum
-                        </h2>
-                        <div>
-                            <p>
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." 
-                            </p>
-                        </div>
-                    </div>
+    <section class="jumbotron jumbotron-fluid curricula" id="curriculum">
+        <div  class="justify-content-center text-center">   
+            <h2>
+                Curriculum
+            </h2>
+        </div> 
+        <div class="curricul"> 
+            <a href="https://drive.google.com/open?id=1VrzrzoT3wbJTqYOrSwEig7vT5QviiEUP" target="_blank">
+                <div class="loader">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
-            </div>
-        </div>
+            </a>
+        </div>    
     </section>
 
     <!--Section of Contact-->
