Add descriptio about projects, and botons

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
                 <li>
                     <div class="content">
                         <h2>Save Word</h2>
-                        <p>Aqui va algo de la descripcion del proyecto</p>
+                        <p>WebApp basado en el cifrado césar, que tiene como finalidad el ayudar a los clientes para que sus contraseñas
+                            sean mas seguras y a la vez fáciles de recordar.
+                        </p>
                         <button type="button" class="btn btn-info">Sitio</button>
                         <button type="button" class="btn btn-info">Github</button>
                     </div>
@@ -143,7 +145,7 @@
                 <li>
                     <div class="content">
                         <h2>Tic Tac Toe</h2>
-                        <p>Aqui va algo de la descripcion del proyecto</p>
+                        <p>Famoso y divertido juego del gato, creado con REACT-NATIVE para celular android</p>
                         <button type="button" class="btn btn-info">Sitio</button>
                         <button type="button" class="btn btn-info">Github</button>
                     </div>
@@ -151,7 +153,9 @@
                 <li>
                     <div class="content">
                         <h2>Pocket-Mon</h2>
-                        <p>Aqui va algo de la descripcion del proyecto</p>
+                        <p>Basado en el juego de pokemon, esta webapp permite a los usuarios obtener información de los 150
+                            pokemones de la región de canto, aparte de poder filtrar y ordenar los pokemones segun el gusto del cliente.
+                        </p>
                         <button type="button" class="btn btn-info">Sitio</button>
                         <button type="button" class="btn btn-info">Github</button>
                     </div>
@@ -159,7 +163,10 @@
                 <li>
                     <div class="content">
                         <h2>Food-Map</h2>
-                        <p>Aqui va algo de la descripcion del proyecto</p>
+                        <p>Pagina web diseñada para que los usuarios puedan consultar los mejores restaurantes de Guadalajara,
+                            asi como tambien localizar los mas cercanos a la zona donde se encuentre e incluso filtrar
+                            los restaurantes según el tipo de comida.
+                        </p>
                         <button type="button" class="btn btn-info">Sitio</button>
                         <button type="button" class="btn btn-info">Github</button>
                     </div>
@@ -167,7 +174,9 @@
                 <li>
                     <div class="content">
                         <h2>Step'n Safe</h2>
-                        <p>Aqui va algo de la descripcion del proyecto</p>
+                        <p>Prototipado de alta fidelidad de aplicacion web, dirigida principalmente a usuarias como herramienta
+                            para su seguridad diaria.
+                        </p>
                         <button type="button" class="btn btn-info">Sitio</button>
                         <button type="button" class="btn btn-info">Github</button>
                     </div>
