Add function for send email with form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portafolio</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <link rel="dns-prefetch" href="https://www.google-analytics.com/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -213,7 +214,7 @@
                                 Contactame
                             </h2>
                             <p>
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                "We created what you belive in". 
                             </p>
                         </div>
                     </div>
@@ -221,27 +222,27 @@
 
                 <div class="row clearfix">
                     <div class="offset-sm-2 col-sm-8">
-                        <form>
+                        <!-- Form to send an email -->
+                        <form id="contactform" method="POST" name="addForm">
                             <div class="form-group">
                                 <label>Nombre</label>
-                                <input type="text" name="" class="form-control">
+                                <input type="text" name="name" class="form-control subject">
                             </div>
                             <div class="form-group">
                                 <label>Email</label>
-                                <input type="text" name="" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label>Telefono</label>
-                                <input type="text" name="" class="form-control">
+                                <input type="email" name="_replyto" class="form-control email">
+                                <input type="hidden" name="_subject" value="Portafolio_Marcela" />
                             </div>
                             <div class="form-group">
                                 <label>Mensaje</label>
-                                <textarea class="form-control textarea" name=""></textarea>
+                                <textarea class="form-control message" name="message"></textarea>
+                                <input type="text" name="_gotcha" style="display:none" />
                             </div>
-                            <div class="form-group">
-                                <button class="btn btnD1">Enviame para contactarte</button>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-primary validForm">Enviar</button>
                             </div>
                         </form>
+
                     </div>
                 </div>
 
@@ -274,6 +275,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+    <script type="text/javascript" src="src/contact.js"></script>
+
 </body>
 </html>
