Add style in section of Contact, and change all background color for black, and change capital letter on tittles.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="src/AboutMe.css">
     <link rel="stylesheet" type="text/css" href="src/Projects.css">
     <link rel="stylesheet" type="text/css" href="src/cv.css">
+    <link rel="stylesheet" type="text/css" href="src/contact.css">
+    <link rel="stylesheet" type="text/css" href="src/footer.css">
   
 </head>
 <body>
@@ -110,8 +112,9 @@
                     <div class="box d-flex justify-content-center">
                         <div class="layer1">
                             <h2 class="titleAbout">
-                                Quién Soy
+                                QUIÉN SOY
                             </h2>
+                            <br>
                             <p class="titleAbout">
                                 Soy una apasionada de aprender continuamente y cuando no estoy <i>codeando</i> me gusta ver cine de arte, asistir al teatro, 
                                 leer libros de diversos temas de mi interés o simplemente ver alguna serie preferentemente de ciencia ficción o thriller.
@@ -128,7 +131,8 @@
     <!--Section of Projects-->
     <section class="jumbotron jumbotron-fluid slidPro" id="projects">
         <div class="justify-content-center text-center">
-                <h2>Proyectos</h2>
+                <h2>PROYECTOS</h2>
+                <br>
                 <br>
         </div>
         
@@ -189,8 +193,9 @@
     <section class="jumbotron jumbotron-fluid curricula" id="curriculum">
         <div  class="justify-content-center text-center">   
             <h2>
-                Curriculum
+                CURRICULUM
             </h2>
+            <br>
         </div> 
         <div class="curricul"> 
             <a href="https://drive.google.com/open?id=1VrzrzoT3wbJTqYOrSwEig7vT5QviiEUP" target="_blank">
@@ -205,13 +210,13 @@
     </section>
 
     <!--Section of Contact-->
-    <section class="contact" id="contact">
+    <section class="jumbotron jumbotron-fluid contact" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="headerText text-center">
                             <h2>
-                                Contactame
+                                CONTACTAME
                             </h2>
                             <p>
                                 "We created what you belive in". 
@@ -226,16 +231,16 @@
                         <form id="contactform" method="POST" name="addForm">
                             <div class="form-group">
                                 <label>Nombre</label>
-                                <input type="text" name="name" class="form-control subject">
+                                <input type="text" name="name" class="form-control subject" placeholder="Fulanito">
                             </div>
                             <div class="form-group">
                                 <label>Email</label>
-                                <input type="email" name="_replyto" class="form-control email">
+                                <input type="email" name="_replyto" class="form-control email" placeholder="fulanito@email.com">
                                 <input type="hidden" name="_subject" value="Portafolio_Marcela" />
                             </div>
                             <div class="form-group">
                                 <label>Mensaje</label>
-                                <textarea class="form-control message" name="message"></textarea>
+                                <textarea class="form-control message" name="message" placeholder="Hola fulanita..."></textarea>
                                 <input type="text" name="_gotcha" style="display:none" />
                             </div>
                             <div class="form-group text-center">
@@ -249,8 +254,8 @@
             </div>
         </section>
 
-        <footer>
-           <div class="container">
+        <footer class="desigFooter">
+           <div class="container footer">
                <div class="row">
                    <div class="col-sm-12">
                        <ul class="sci">
