Change solid color for another color not solid

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <br>
         </div> 
         <div class="curricul"> 
-            <a href="https://drive.google.com/open?id=1VrzrzoT3wbJTqYOrSwEig7vT5QviiEUP" target="_blank">
+            <a href="https://drive.google.com/open?id=1QaBtHKl85r4sdG0batIwV5n2FgbHSK7u" target="_blank" title="Descargar y visualizar CV"  rel="noopener noreferrer">
                 <div class="loader">
                     <span></span>
                     <span></span>
